--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -80,7 +80,8 @@
   <div class="carousel relative container mx-auto mt-20" style="max-width:1600px;">
     <div class="carousel-inner relative overflow-hidden w-full">
         <!--Slide 1-->
-        <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
+    <div class="carousel-inner relative overflow-hidden w-full">
+      <input class="carousel-open w-full" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
         <div class="carousel-item absolute opacity-0" style="height:60vh;">
           <div class="block h-full w-full mx-auto flex pt-6 md:pt-0 md:items-center bg-cover bg-right" style="background-image: url('/assets/images/assurance-auto.jpg');">
   
@@ -260,10 +261,11 @@
       <span class="text-[0.65rem] text-sky-400 mt-0.5 font-semibold">Contact</span>
     </div>
   </div>
-  <div class="container mx-auto p-6 text-center bg-gradient-to-r from-sky-300 to-sky-100">
+  <div class="w-full p-6 text-center bg-gradient-to-r from-sky-300 to-sky-100">
     <h2 class="text-3xl font-semibold mb-6 text-gray-800">Votre Partenaire en Assurance Auto et Vie</h2>
     <p class="text-lg text-gray-700 mb-6">Protégez ce qui compte le plus, pour aujourd'hui et pour demain.</p>
   </div>
+  
   
   <div class="container mx-auto p-4 grid md:grid-cols-2 gap-8 mt-7">
     <!-- Assurance Auto -->
