--- a/src/app/espace-client/login/login.component.html
+++ b/src/app/espace-client/login/login.component.html
@@ -1,44 +1,89 @@
-<section class="min-h-screen flex box-border justify-center items-center">
-    <div class="bg-[#F5F5F5] rounded-2xl flex max-w-3xl p-5 items-center shadow-lg">
-
-        <div class="md:w-1/2 px-8">
-            <h2 class="font-bold text-3xl text-[#002D74]">Connexion</h2>
-            <p class="text-sm mt-4 text-[#002D74]">Si vous êtes déjà membre, connectez-vous facilement maintenant.</p>
-
-            <form #myform="ngForm" action="" class="flex flex-col gap-4" (ngSubmit)="onSubmit()">
-                <!-- ngModel for email and password fields -->
-                <input class="p-2 mt-8 rounded-xl border" type="email" #email="ngModel" name="email" [(ngModel)]="user.email" placeholder="Email" required>
-                <div class="text-red-500 text-sm mt-1" *ngIf="email.touched && !email.valid">
-                    <div *ngIf="email.hasError('required')">L'email est requis.</div>
-              <div *ngIf="email.errors && email.hasError('pattern')">Veuillez saisir un email valide.</div>
-                </div>
-                <div class="relative">
-                    <input class="p-2 rounded-xl border w-full" #password="ngModel" type="password" name="password" id="password" [(ngModel)]="user.password" placeholder="Mot de passe" required>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="gray" id="togglePassword"
-                        class="bi bi-eye absolute top-1/2 right-3 -translate-y-1/2 cursor-pointer z-20 opacity-100"
-                        viewBox="0 0 16 16">
-                        <path d="M16 8s-3-5.5-8-5.5S0 8 0 8s3 5.5 8 5.5S16 8 16 8zM1.173 8a13.133 13.133 0 0 1 1.66-2.043C4.12 4.668 5.88 3.5 8 3.5c2.12 0 3.879 1.168 5.168 2.457A13.133 13.133 0 0 1 14.828 8c-.058.087-.122.183-.195.288-.335.48-.83 1.12-1.465 1.755C11.879 11.332 10.119 12.5 8 12.5c-2.12 0-3.879-1.168-5.168-2.457A13.134 13.134 0 0 1 1.172 8z"></path>
-                        <path d="M8 5.5a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5zM4.5 8a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0z"></path>
-                    </svg>
-                    <div class="text-red-500 text-sm mt-1" *ngIf="password.touched && !password.valid">
-                        <div *ngIf="password.hasError('required')">Le mot de passe est requis.</div>
-                    </div>
-                </div>
-
-                <button  [disabled]="myform.invalid" class="bg-[#002D74] text-white py-2 rounded-xl hover:scale-105 duration-300 hover:bg-[#206ab1] font-medium" type="submit">Se connecter</button>
-            </form>
-            <a  routerLink="/espace-client/forgot-password" class="text-sm text-[#002D74] hover:text-[#206ab1] text-right mt-2">Mot de passe oublié ?</a>
-
-            <div class="mt-4 text-sm flex justify-between items-center">
-                <p class="mr-3 md:mr-0">Vous n'avez pas de compte ?</p>
-                <button routerLink="/espace-client/register" class="hover:border register text-white bg-[#002D74] hover:border-gray-400 rounded-xl py-2 px-5 hover:scale-110 hover:bg-[#002c7424] font-semibold duration-300">S'inscrire</button>
+<section class="min-h-screen flex items-center justify-center p-4">
+    <!-- Conteneur principal -->
+    <div class="relative bg-white flex flex-col md:flex-row rounded-2xl shadow-lg max-w-4xl p-5 items-center w-full h-auto md:h-[85vh]">
+      <!-- Partie gauche : Formulaire -->
+      <div class="w-full md:w-1/2 px-4 md:px-16">
+        <!-- Logo et titre -->
+        <a routerLink="/" class="flex items-center mb-10 text-2xl font-semibold text-teal-800">
+          <i class="fas fa-umbrella w-8 h-8 mr-2 text-teal-800"></i>
+          Flesk Cover
+        </a>
+        <h2 class="font-semibold text-xl text-gray-700">Bienvenue chez Flesk Cover</h2>
+        <p class="text-gray-500 text-sm">Gérez vos contrats d'assurance auto et vie, constats et paiements en toute  facilité</p>
+  
+        <!-- Formulaire de connexion -->
+        <form #loginForm="ngForm" (ngSubmit)="onSubmit()" class="space-y-5 mt-6">
+          <!-- Email -->
+          <div>
+            <label for="email" class="block mb-2 text-sm font-medium text-gray-700">Email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              [(ngModel)]="user.email"
+              #email="ngModel"
+              class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-teal-800 focus:border-teal-800 block w-full p-2 hover:shadow-lg"
+              placeholder="Entrez votre email"
+              required
+            />
+            <div class="text-red-500 text-sm mt-1" *ngIf="email.touched && email.invalid">
+              <div *ngIf="email.errors?.['required']">L'email est requis.</div>
+              <div *ngIf="email.errors?.['pattern']">Veuillez saisir un email valide.</div>
             </div>
+          </div>
+  
+          <!-- Mot de passe -->
+          <div>
+            <label for="password" class="block mb-2 text-sm font-medium text-gray-700">Mot de passe</label>
+            <input
+              type="password"
+              name="password"
+              id="password"
+              [(ngModel)]="user.password"
+              #password="ngModel"
+              class="bg-gray-50 border border-gray-300 text-gray-900 rounded-lg focus:ring-teal-800 focus:border-teal-800 block w-full p-2"
+              placeholder="Au moins 8 caractères"
+              required
+            />
+            <div class="text-red-500 text-sm mt-1" *ngIf="password.touched && password.invalid">
+              <div *ngIf="password.errors?.['required']">Le mot de passe est requis.</div>
+              <div *ngIf="password.errors?.['minlength']">Le mot de passe doit contenir au moins 8 caractères.</div>
+            </div>
+          </div>
+  
+          <!-- Options supplémentaires -->
+          <div class="flex items-center justify-between">
+            
+            <a routerLink="/espace-client/forgot-password" class="text-sm font-medium text-teal-800 hover:underline">Mot de passe oublié ?</a>
+          </div>
+  
+          <!-- Bouton de connexion -->
+          <button
+            type="submit"
+            [disabled]="loginForm.invalid"
+            class="w-full text-white bg-teal-800 hover:bg-teal-700 focus:ring-4 focus:outline-none focus:ring-teal-600 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
+          >
+            Se connecter
+          </button>
+  
+          <!-- Lien inscription -->
+          <p class="text-sm font-light text-gray-500 mt-4">
+            Pas encore de compte ? <a routerLink="/espace-client/register" class="font-medium text-teal-800 hover:underline">Créer un compte</a>
+          </p>
+        </form>
+      </div>
+  
+      <!-- Partie droite : Image -->
+      <div class="relative hidden md:block md:w-1/2 h-full">
+        <div class="absolute inset-0 bg-gradient-to-t from-teal-800 to-transparent opacity-75 rounded-2xl"></div>
+        <img src="assets/images/image_assurance.jpg" alt="Image Assurance" class="object-cover w-full h-full rounded-2xl">
+        <div class="absolute bottom-0 left-0 p-6 text-white">
+          <h2 class="text-2xl font-bold">Roulez sereinement, vivez pleinement</h2>
+          <p class="mt-2 text-sm">
+            La protection de vos biens et de vos proches en toute sérénité. Gérez vos assurances en toute simplicité avec Flesk Cover.
+          </p>
         </div>
-
-        <div class="md:block hidden w-1/2">
-            <img class="rounded-2xl w-full h-[450px] " src="assets/images/loginimage.jpg" alt="Login Image">
-        </div>
-        
-        
+      </div>
     </div>
-</section>
+  </section>
+  
