--- a/src/app/contrat/creation-contrat/creation-contrat.component.html
+++ b/src/app/contrat/creation-contrat/creation-contrat.component.html
@@ -1,5 +1,6 @@
 <div class="p-8 max-w-4xl mx-auto bg-white shadow-lg rounded-xl">
-  <h1 class="text-3xl font-bold text-center text-blue-600 mb-6">Souscrire à un contrat Assurance Auto</h1>
+  <img src="assets/images/logoFC.png" alt="Logo FLESK COVER" class="mx-auto w-32 h-32 mb-4">
+  <h1 class="text-3xl font-bold text-center text-teal-800 mb-6">Souscrire à un contrat Assurance Auto</h1>
   <form [formGroup]="insuranceForm" (ngSubmit)="onSubmit()">
     <!-- Partie Assuré -->
     <!-- Partie Assuré -->
@@ -26,7 +27,7 @@
     <label class="text-gray-700 mb-1"><span class="text-red-500">*</span> CIN</label>
     <div class="flex items-center border p-3 rounded-lg shadow-sm bg-gray-50">
       <mat-icon class="text-blue-500 mr-2">badge</mat-icon>
-      <input type="text" formControlName="CIN" class="w-full bg-transparent focus:outline-none" required>
+      <input type="text" formControlName="Cin" class="w-full bg-transparent focus:outline-none" required>
     </div>
   </div>
   <!-- Adresse -->
@@ -50,7 +51,7 @@
     <label class="text-gray-700 mb-1"><span class="text-red-500">*</span> Téléphone</label>
     <div class="flex items-center border p-3 rounded-lg shadow-sm bg-gray-50">
       <mat-icon class="text-blue-500 mr-2">phone</mat-icon>
-      <input type="text" formControlName="tel" class="w-full bg-transparent focus:outline-none" required>
+      <input type="text" formControlName="telephone" class="w-full bg-transparent focus:outline-none" required>
     </div>
   </div>
   <!-- Email -->
@@ -236,7 +237,7 @@
 </div>
 </div>
     <div class="flex justify-center mt-6">
-      <button type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-lg shadow-md hover:bg-blue-700 transition duration-300">SOUSCRIRE</button>
+      <button type="submit" class="  bg-teal-800  text-white px-6 py-2 rounded-lg shadow-md hover: from-teal-600 transition duration-300">SOUSCRIRE</button>
     </div>
   </form>
 </div>
