--- a/src/app/accueil/auto/auto.component.html
+++ b/src/app/accueil/auto/auto.component.html
@@ -9,7 +9,7 @@
     />
 
     <!-- Dégradé sur l'image -->
-    <div class="absolute inset-0 bg-gradient-to-r from-green-400/70 to-green-200/50"></div>
+    <div class="absolute inset-0 bg-gradient-to-r from-teal-800/70 to-green-200/50"></div>
 
 
     <!-- Contenu texte centré -->
@@ -27,7 +27,7 @@
 
   <!-- Section Texte descriptif -->
   <div class="container mx-auto px-6">
-    <div class=" text-gray-800 p-10 rounded-2xl shadow-xl mb-12 border-t-4 border-green-600">
+    <div class=" text-gray-800 p-10 rounded-2xl shadow-xl mb-12 border-t-4 border-teal-800">
       <p class="leading-relaxed text-lg">
         La voiture est un bien essentiel, voire indispensable, pour assurer votre mobilité. Il est donc important de bien la protéger, ainsi que ses occupants, avec la meilleure assurance qui soit.
         <br><br>
@@ -41,9 +41,20 @@
       </p>
     </div>
   </div>
+  <div class="text-center mt-20">
+    <h1 class="text-3xl font-bold text-teal-800 mb-4">
+      Nos packs
+    </h1>
+    <h3 class=" text-gray-900 text-2xl font-bold mb-2">
+      Nos formules d'assurance auto
+    </h3>
+    <p class=" text-gray-600">
+      Pour cela, nous mettons à votre disposition le nouveau contrat adapté à vos besoins avec un excellent rapport qualité/prix
+    </p>
+</div>
 
   <!-- Section Formules d'Assurance -->
-  <div class="container mx-auto px-4">
+  <div class="container mx-auto mt-20 px-4">
     <div class="grid md:grid-cols-3 gap-8 mb-12">
       <!-- Formule ESSENTIELLE -->
       <div class="bg-white p-10 rounded-2xl shadow-2xl text-center transform transition-transform duration-300 hover:scale-105 hover:shadow-lg h-110 flex flex-col justify-between">
@@ -87,7 +98,7 @@
 
    <!-- Section Comparatif formules -->
 <div class="py-10">
-  <h2 class="text-3xl font-bold text-center text-green-600 mb-8">Comparatif formules</h2>
+  <h2 class="text-3xl font-bold text-center text-teal-800 mb-8">Comparatif formules</h2>
   <div class="container mx-auto px-6 bg-white rounded-lg shadow-lg overflow-hidden">
     <table class="w-full border-collapse">
       <thead>
@@ -122,7 +133,7 @@
 
     <!-- Section Questions Fréquentes -->
     <div class=" p-8 rounded-lg shadow-lg">
-      <h2 class="text-3xl font-bold text-green-600 mb-6 animate-fade-in">Questions Fréquentes</h2>
+      <h2 class="text-3xl font-bold text-teal-800 mb-6 animate-fade-in">Questions Fréquentes</h2>
       <div class="space-y-4">
         <!-- Question 1 -->
         <div class="border-b border-gray-200 pb-4">
