--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -38,7 +38,10 @@
              
           </div>
 
-          <!-- Bouton RSE -->
+          <a [routerLink]="['/espace-client/login']" class="bg-teal-500 text-white font-bold px-4 py-2 rounded-lg">
+            Connexion
+          </a>
+          
          
       </div>
   </nav>
