--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -7,11 +7,11 @@
         font-family: 'Poppins', sans-serif;
       }
     </style>
-  </head>   
+  </head>
   <body >
    <!-- Logo -->
-   
-      
+
+
    <div class="  w-full flex flex-col">
     <!-- Première barre de navigation -->
     <nav class="w-full bg-gradient-to-r from-teal-900 to-teal-700 text-white p-3 flex items-center justify-between">
@@ -22,27 +22,27 @@
         <p class=" text-white text-lg font-semibold">Roulez sereinement, vivez pleinement</p>
         <i class="fas fa-star text-white w-6 h-4"></i>
       </div>
-      
-      
+
+
 
       <!-- Recherche et Menu -->
       <div class="flex items-center mr-25 space-x-8">
-       
+
 
           <!-- Menu déroulant -->
           <div class="relative group">
             <button [routerLink]="['/accueil', 'about']" class="font-semibold">
               Qui nous sommes ?
             </button>
-            
-             
+
+
           </div>
 
           <a [routerLink]="['/espace-client/login']" class="bg-teal-500 text-white font-bold px-4 py-2 rounded-lg">
             Connexion
           </a>
-          
-         
+
+
       </div>
   </nav>
     <!-- Ligne de séparation entre les deux menus -->
@@ -53,13 +53,13 @@
         <div class="flex items-center space-x-4 mr-10"> <!-- Réduction de l'espace avec space-x-4 -->
           <img src="\assets\images\logoFC.png" alt="STAR Assurances" class="h-10 w-50" />
         </div>
-    
+
         <!-- Menu -->
         <ul class="flex space-x-4 text-gray-500 mt-2"> <!-- Réduction de l'espace avec space-x-4 -->
           <!-- Menu Item: Ma voiture -->
           <li class="relative group">
             <a href="#" class="text-teal-800 font-semibold">Ma voiture</a>
-        
+
             <!-- Dropdown Menu for Ma voiture -->
             <div class="absolute left-0 mt-2 w-64 bg-white shadow-lg rounded-md opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 z-50">
               <div class="container mx-auto p-6 bg-white shadow-lg rounded-lg w-[500px]">
@@ -71,14 +71,14 @@
                       <h2 class="text-lg font-semibold text-teal-800">
                         <a [routerLink]="['/accueil/auto']">Nos produits</a>
                       </h2>
-                      
+
                     </div>
                     <p class="text-sm text-gray-600">La solution d’assurance auto idéale pour une sécurité optimale !</p>
                   </div>
-        
+
                   <!-- Ligne verticale -->
                   <div class="border-r-2 border-gray-300 h-24"></div>
-        
+
                   <!-- Section Démarches -->
                   <div class="flex-1 pl-6">
                     <div class="mt-2 flex items-center gap-2">
@@ -92,11 +92,11 @@
               </div>
             </div>
           </li>
-        
+
           <!-- Menu Item: Ma prévoyance -->
           <li><a href="#" class="hover:text-teal-800">Ma prévoyance</a></li>
         </ul>
-        
+
         <!-- Contact Info -->
         <div class="flex items-center space-x-6 mr-10 text-gray-500">
           <!-- Téléphone -->
@@ -104,7 +104,7 @@
             <i class="fas fa-phone-alt text-teal-800"></i>
             <span class="text-sm text-gray-700">+216 25 206 488</span>
           </div>
-    
+
           <!-- Email -->
           <div class="flex items-center space-x-2">
             <i class="fas fa-envelope text-teal-800"></i>
@@ -113,12 +113,12 @@
         </div>
       </div>
     </nav>
-    
+
     <div class="relative hidden md:block mt-4 w-full">
       <div class="absolute inset-0 bg-gradient-to-l from-teal-700 to-transparent opacity-75 "></div>
       <img src="assets/images/ass.png" alt="Image Assurance" class="object-cover w-full h-full ">
       <div class="absolute inset-0 flex flex-col justify-center items-start px-4 py-8">
-       
+
         <!-- Petite div blanche ajoutée ici -->
         <div class="mt-6 bg-white p-4 rounded-md shadow-md">
           <div class="mt-2 flex items-center gap-2">
@@ -126,37 +126,37 @@
             <i class="fas fa-car w-6 h-4 text-teal-800"></i>
             <h3 class="text-lg font-semibold text-teal-800">FLESK COVER</h3>
           </div>
-    
+
           <div class="mt-4">
             <p class="text-sm text-gray-600 mb-2"> Votre Partenaire en Assurance Auto et Vie</p>
             <p class="text-sm text-gray-600">  Protégez ce qui compte le plus, pour aujourd'hui et pour demain.!</p>
           </div>
-      
+
         </div>
       </div>
     </div>
-    
-  
-  
 
-  
+
+
+
+
 
     <div class="text-center mt-20">
       <h1 class="text-3xl font-bold text-teal-800 mb-4">
         Découvrez toutes nos assurances
       </h1>
       <p class=" text-gray-600">
-        Des couvertures complètes pour être à vos côtés 
+        Des couvertures complètes pour être à vos côtés
       </p>
       <p class=" text-gray-600">
         quand vous en aurez besoin
       </p>
   </div>
-  
+
   </div>
   <section class="bg-white py-8 ">
     <div class="flex flex-wrap justify-center items-center gap-x-30">
-      
+
       <!-- Carte Assurance Auto -->
       <div class="w-full md:w-1/3 xl:w-1/5 p-6  flex flex-col">
         <a [routerLink]="['/accueil/auto']">
@@ -185,7 +185,7 @@
           </div>
         </a>
       </div>
-  
+
       <!-- Carte Assurance Vie -->
       <div class="w-full md:w-1/3 xl:w-1/5 p-6 flex flex-col">
         <a [routerLink]="['/accueil/assurance-vie']">
@@ -214,10 +214,10 @@
           </div>
         </a>
       </div>
-  
+
     </div>
   </section>
-  
+
   <div class="fixed right-2 top-[50%] flex flex-col z-50 space-y-2">
     <!-- Agences -->
     <div class="bg-white border rounded-xl border-teal-800 shadow-md p-3 flex flex-col items-center hover:bg-teal-50 cursor-pointer transition duration-300">
@@ -227,16 +227,18 @@
       <a [routerLink]="['/accueil', 'assistance']" class="text-[0.65rem] text-teal-800 mt-0.5 font-semibold">
         Assistance
       </a>
-      
+
     </div>
-  
+
     <div class="bg-white border rounded-xl border-teal-800 shadow-md p-3 flex flex-col items-center hover:bg-teal-50 cursor-pointer transition duration-300">
       <svg class="w-4 h-4 text-teal-800" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 2H8a2 2 0 00-2 2v16a2 2 0 002 2h8a2 2 0 002-2V4a2 2 0 00-2-2zM12 12h4m-4-4h4M8 16h8" />
       </svg>
-      <span class="text-[0.65rem] text-teal-800 mt-0.5 font-semibold">Devis</span>
+      <a [routerLink]="['/contrat', 'devi']" class="text-[0.65rem] text-teal-800 mt-0.5 font-semibold">
+        Devis
+      </a>
     </div>
-  
+
     <!-- Sinistre -->
     <div class="bg-white border rounded-xl border-teal-800 shadow-md p-3 flex flex-col items-center hover:bg-teal-50 cursor-pointer transition duration-300">
       <svg class="w-4 h-4 text-teal-800" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -244,12 +246,12 @@
       </svg>
       <span class="text-[0.65rem] text-teal-800 mt-0.5 font-semibold">Sinistre</span>
     </div>
-  
+
     <!-- Contact -->
-    
+
   </div>
-  
- 
+
+
 <div class="w-full p-6 text-center bg-gradient-to-r from-teal-600 to-teal-100">
   <h2 class="text-3xl font-semibold mb-6 text-gray-800"> Votre tranquillité d'esprit, notre priorité.</h2>
   <p class="text-gray-700 mb-2">
@@ -258,7 +260,7 @@
 </div>
 
 
-  
+
   <div class=" flex justify-center items-center min-h-screen p-10">
     <div class="w-full max-w-6xl space-y-6">
         <div class="bg-green-100 p-6 rounded-lg flex items-center">
@@ -331,7 +333,7 @@
   <div class="min-h-screen flex flex-col justify-center items-center mt-[10px]">
     <h1 class="text-3xl font-bold text-teal-800 text-center mb-6">Vous êtes déjà inscrit ?</h1>
     <p class="text-xl text-center text-gray-600 mb-15">Nos services en ligne pour vous faciliter la vie</p>
-  
+
     <div class="grid grid-cols-1 md:grid-cols-3 gap-10 max-w-4xl">
       <div class="bg-white p-8 rounded-lg shadow-xl text-center border-1 border-teal-800">
         <i class="fas fa-file-contract text-5xl text-teal-800 mb-4"></i>
@@ -339,43 +341,42 @@
         <p class="text-gray-600 mb-4">
           Découvrez nos offres de contrats adaptées à vos besoins. Que ce soit pour une assurance automobile, habitation ou santé, souscrivez en toute simplicité et profitez d’une couverture optimale.
         </p>
-        
+
       </div>
-    
+
       <div class="bg-white p-8 rounded-lg shadow-xl text-center border-1 border-teal-800">
         <i class="fas fa-car-crash text-5xl text-teal-800 mb-4"></i>
         <h2 class="text-2xl text-gray-700 font-semibold mb-4">Déclarer un sinistre</h2>
         <p class="text-gray-600 mb-4">
           En cas d’accident ou de sinistre, effectuez votre déclaration en ligne en quelques minutes. Notre plateforme simplifie la gestion des incidents pour une prise en charge rapide et efficace.
         </p>
-      
+
       </div>
-    
+
       <div class="bg-white p-8 rounded-lg shadow-xl text-center border-1 border-teal-800">
         <i class="fas fa-credit-card text-5xl text-teal-800 mb-4"></i>
         <h2 class="text-2xl font-semibold text-gray-700 mb-4">Payer votre prime</h2>
         <p class="text-gray-600 mb-4">
           Payez vos primes en toute sécurité grâce à notre service de paiement en ligne. Utilisez votre carte bancaire et assurez la continuité de votre couverture sans souci.
         </p>
-       
+
       </div>
     </div>
-    
+
     <footer class="bg-teal-800 w-full mt-10 text-white py-6">
       <div class="container mx-auto text-center">
         <p class="text-lg font-semibold">Assurance Vie & Automobile</p>
         <p class="text-sm mt-1">Protection et sérénité pour vous et votre famille</p>
-        
+
         <div class="flex justify-center space-x-6 mt-4">
           <a href="#" class="hover:text-gray-300">Accueil</a>
           <a href="#" class="hover:text-gray-300">Assitance</a>
           <a href="#" class="hover:text-gray-300">Qui nous sommes</a>
           <a href="#" class="hover:text-gray-300">Devis</a>
         </div>
-    
+
         <div class="mt-4">
           <p class="text-xs">&copy; 2025 Assurance Plus - Tous droits réservés</p>
         </div>
       </div>
     </footer>
-    
