--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -234,7 +234,7 @@
       <svg class="w-4 h-4 text-teal-800" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 2H8a2 2 0 00-2 2v16a2 2 0 002 2h8a2 2 0 002-2V4a2 2 0 00-2-2zM12 12h4m-4-4h4M8 16h8" />
       </svg>
-      <a [routerLink]="['/contrat', 'devi']" class="text-[0.65rem] text-teal-800 mt-0.5 font-semibold">
+      <a [routerLink]="['/dashboard-assure', 'devi']" class="text-[0.65rem] text-teal-800 mt-0.5 font-semibold">
         Devis
       </a>
     </div>
