--- a/src/app/assure/creation-contrat/creation-contrat.component.html
+++ b/src/app/assure/creation-contrat/creation-contrat.component.html
@@ -1,5 +1,10 @@
-<div class="p-8 max-w-4xl mx-auto bg-white shadow-lg rounded-xl">
-  <img src="assets/images/logoFC.png" alt="Logo FLESK COVER" class="mx-auto w-32 h-32 mb-4">
+
+<div class="flex flex-col md:flex-row">
+  <!-- Dashboard -->
+  <app-dashboard class="w-full md:w-64 bg-white shadow-md"></app-dashboard>
+
+  <!-- Contenu principal -->
+  <div class="flex-1 p-4 md:p-8 bg-gray-100 min-h-screen">
   <h1 class="text-3xl font-bold text-center text-teal-800 mb-6">Souscrire à un contrat Assurance Auto</h1>
   <form [formGroup]="insuranceForm" (ngSubmit)="onSubmit()">
     <!-- Partie Assuré -->
